# flavia_examen_CPP_parcial3

./: CMakeLists.txt  README.md  funciones.cpp  funciones.h  lanzador.cpp  lanzador.h  main.cpp  main.h  procedimiento.cpp  procedimiento.h  tarea.h
actor/: actor.cpp  actor.h
crud/: crud.cpp  crud.h
lanzador/: lanzador.cpp  lanzador.h
tarea/: tarea.cpp  tarea.h
trabajador/: trabajador.cpp  trabajador.h
